# ImageProcessor

./: CMakeLists.txt  image_processor.cpp  readme.md
include/factories/: BlurFactory.h  CropFactory.h  EdgeFactory.h  FilterFactory.h  GrayscaleFactory.h  NegativeFactory.h  OilFactory.h  SharpeningFactory.h
include/filters/: ApplyMatrix.h  Blur.h  Crop.h  Edge.h  Filter.h  Grayscale.h  Negative.h  Oil.h  Sharpening.h
include/image/: BMP.h  Image.h  Pixel.h
include/tests/: TestFailedException.h
include/utils/: Convert.h
src/factories/: BlurFactory.cpp  CropFactory.cpp  EdgeFactory.cpp  GrayscaleFactory.cpp  NegativeFactory.cpp  OilFactory.cpp  SharpeningFactory.cpp
src/filters/: ApplyMatrix.cpp  Blur.cpp  Crop.cpp  Edge.cpp  Grayscale.cpp  Negative.cpp  Oil.cpp  Sharpening.cpp
src/image/: BMP.cpp  Image.cpp  Pixel.cpp
src/tests/: TestFactories.cpp  TestFailedException.cpp  TestFilters.cpp  TestPixel.cpp
src/utils/: Convert.cpp
